# fnc-simplex

./: .gitignore  CMakeLists.txt  README.md  cplexlp.tmpl  donjlp.tmpl  gen_lp.py  linux_turboboost.sh
RESULTS/: gprof_block_swap_04000_1.txt
baseline/: Makefile  general.hpp  main.cpp  perf.py  run_exp.sh
gen_block_code/: CMakeLists.txt  block.tmpl  block_avx.tmpl  block_swap.tmpl  block_swap_avx.tmpl  gen_block.py
include/: simplex.h
lp_gen/: CMakeLists.txt  README.md  cpplexlp.tmpl  donjlp.tmpl  gen_lp.py
presentation/: MAIN.lyx  MAIN.lyx~  impl.lyx  impl.lyx~  intro.lyx  intro.lyx~  results.lyx  results.lyx~
problems/: lpgen.sh  lpgen_avg.sh  lpgen_heavy.sh  lpgen_light.sh  lpgen_std.sh  lpgen_upper.sh  lpgen_verylight.sh  lptest.sh  mount_ramdisk.sh  preview_lpgen.sh
problems/gen_hand/: input2.dlp  input6.dlp  test.cpplp  test.dlp  test.lp
report/: bibl_conf.bib  report.tex
ricoh-ref-impl/: .vimprj  CMakeLists.txt
ricoh-ref-impl/src/: CMakeLists.txt  main.c  main.cpp  main1.cpp  main2.cpp  read_lp.cpp  simplex.cpp  time_fnc_simplex.cpp
src/: CMakeLists.txt  Makefile  gen_avgs.py  main.cpp  run_glpk.hpp  run_gurobi.hpp  run_simplex.hpp  run_soplex.hpp  simplex.c
standard_ref/: Makefile  cost  general.hpp  input1  input2  input3  input5  input6  main.cpp  simple.hpp  test-lp-1
timing/: gen_avg.py  gen_cycles.py  gen_cycles_from_avg.py  gen_perf.py  gen_perf_from_avg.py  gen_roof.py  gen_roof_from_avg.py  gen_soplex.py  gen_wall.py  gen_wall_from_avg.py  plot_avg.py  plt_cycles.py  plt_perf.py  plt_roof.py  plt_wall.py  solve_dlp.m  valgrind.sh
(+226 files in other folders)
